API finished
Need to do authentication
